--- a/index.html
+++ b/index.html
@@ -30,23 +30,17 @@
       // run the currently selected effect
       function runEffect() {
         // run the effect
-        $( "#msg"+a ).effect( "blind",500);
-      };
-
-      // callback function to bring a hidden box back
-      function callback() {
-        setTimeout(function() {
-          $( "#msg1" ).removeAttr( "style" ).hide().fadeIn();
-        }, 1000 );
+        $( "#msg"+ a ).toggle( "drop",{direction:"up"},500);
+      setTimeout( function(){  $( "#msg"+(a+3) ).toggle( "drop",{direction:"down"},500);},500)
       };
 
       // set effect from select menu value
       if (a<=9) {
       setInterval(function() { runEffect();  a+=1;  return false;  },3000);
     }
-    else
-    clearInterval();
-    });
+    else { a=1;
+      clearInterval();
+    }; }          );
     </script>
     <style>
     .carousel-inner{
