--- a/index.html
+++ b/index.html
@@ -129,15 +129,43 @@
               </div>
 
               <div style="width:247px;margin-left:72px; height:188px;">
-                <div class="message"  id="msg1" style="display:block"> <div class="test">This one is super old though</div><div class="arrow1"></div><div class="arrow2"></div></div>
-                <div class="message"  id="msg2" style="display:block; float:left; background:transparent; border:1px solid #006DC1 "> <div class="test" style="background:transparent">Killing it J! Straight FYAAH</div><div class="arrow1"></div><div class="arrow2"></div></div>
-                <div class="message"  id="msg3" style="display:block"> <div class="test">Oh my god! I love this fucking track. Remember Coachella?</div><div class="arrow1"></div><div class="arrow2"></div></div>
-                <div class="message"  id="msg4" style="display:none"> <div class="test">Ya that was so much fun</div><div class="arrow1"></div><div class="arrow2"></div></div>
-                <div class="message"  id="msg5" style="display:none"> <div class="test">How about this track though</div><div class="arrow1"></div><div class="arrow2"></div></div>
-                <div class="message"  id="msg6" style="display:none"> <div class="test">Nice. I've heard a couple of his tracks though</div><div class="arrow1"></div><div class="arrow2"></div></div>
-                <div class="message"  id="msg7" style="display:none"> <div class="test">He's is playing at Warfield in a weeks right?</div><div class="arrow1"></div><div class="arrow2"></div></div>
-                <div class="message"  id="msg8" style="display:none"> <div class="test">Wanna go check it out</div><div class="arrow1"></div><div class="arrow2"></div></div>
-                <div class="message"  id="msg9" style="display:none"> <div class="test">Let's do it</div><div class="arrow1"></div><div class="arrow2"></div></div>
+
+                <div class="message ui-widget-content ui-corner-all"  id="msg1" style="display:block">
+                  <div class="test">This one is super old though</div>
+                  <div class="arrow1"></div><div class="arrow2"></div>
+                </div>
+                <div class="message ui-widget-content ui-corner-all"  id="msg2" style="display:block; float:left; background:transparent; border:1px solid #006DC1 ">
+                   <div class="test" style="background:transparent;color:#006CD1">Killing it J! Straight FYAAH</div>
+                   <div class="arrow1"></div><div class="arrow2"></div>
+                 </div>
+                <div class="message ui-widget-content ui-corner-all"  id="msg3" style="display:block">
+                   <div class="test">Oh my god! I love this fucking track. Remember Coachella?</div>
+                   <div class="arrow1"></div><div class="arrow2"></div>
+                 </div>
+                <div class="message ui-widget-content ui-corner-all"  id="msg4" style="display:none; float:left; background:transparent; border:1px solid #006DC1  ">
+                   <div class="test" style="background:transparent;color:#006CD1">Ya that was so much fun</div>
+                   <div class="arrow1"></div><div class="arrow2"></div>
+                 </div>
+                <div class="message ui-widget-content ui-corner-all"  id="msg5" style="display:none">
+                  <div class="test">How about this track though</div>
+                  <div class="arrow1"></div><div class="arrow2"></div>
+                </div>
+                <div class="message ui-widget-content ui-corner-all"  id="msg6" style="display:none; float:left; background:transparent; border:1px solid #006DC1 ">
+                  <div class="test" style="background:transparent;color:#006CD1">Nice. I've heard a couple of his tracks though</div>
+                  <div class="arrow1"></div><div class="arrow2"></div>
+                </div>
+                <div class="message ui-widget-content ui-corner-all"  id="msg7" style="display:none">
+                  <div class="test">He's is playing at Warfield in a weeks right?</div><div class="arrow1"></div>
+                  <div class="arrow2"></div>
+                </div>
+                <div class="message ui-widget-content ui-corner-all"  id="msg8" style="display:none; float:left; background:transparent; border:1px solid #006DC1 ">
+                  <div class="test" style="background:transparent;color:#006CD1">Wanna go check it out</div>
+                  <div class="arrow1"></div><div class="arrow2"></div>
+                </div>
+                <div class="message ui-widget-content ui-corner-all"  id="msg9" style="display:none">
+                  <div class="test">Let's do it</div>
+                  <div class="arrow1"></div><div class="arrow2"></div>
+                </div>
               </div>
           </div>
           <div class="col-lg-4 col-xs-2">
