--- a/index.html
+++ b/index.html
@@ -128,41 +128,48 @@
 
               </div>
 
-              <div style="width:247px;margin-left:72px; height:188px;">
+              <div style="width:247px;margin-left:60px; height:188px;">
 
-                <div class="message ui-widget-content ui-corner-all"  id="msg1" style="display:block">
+                <div class="message ui-widget-content ui-corner-all"  id="msg1">
                   <div class="test">This one is super old though</div>
                   <div class="arrow1"></div><div class="arrow2"></div>
                 </div>
-                <div class="message ui-widget-content ui-corner-all"  id="msg2" style="display:block; float:left; background:transparent; ">
-                   <div class="test" style="background:transparent;color:#006CD1;border:1px solid #006DC1 ">Killing it J! Straight FYAAH</div>
-                   <div class="arrow1"></div><div class="arrow2"></div>
+                <div class="message ui-widget-content ui-corner-all"  id="msg2">
+
+                  <div class="testl" >Killing it J! Straight FYAAH</div>
+                  <div class="arrow1l"></div><div class="arrow2l"></div>
+
+
                  </div>
-                <div class="message ui-widget-content ui-corner-all"  id="msg3" style="display:block">
+                <div class="message ui-widget-content ui-corner-all"  id="msg3" >
+
                    <div class="test">Oh my god! I love this fucking track. Remember Coachella?</div>
-                   <div class="arrow1"></div><div class="arrow2"></div>
+                    <div class="arrow1"></div><div class="arrow2"></div>
                  </div>
-                <div class="message ui-widget-content ui-corner-all"  id="msg4" style="display:none; float:left; background:transparent; ">
-                   <div class="test" style="background:transparent;color:#006CD1;border:1px solid #006DC1 ">Ya that was so much fun</div>
-                   <div class="arrow1"></div><div class="arrow2"></div>
-                 </div>
-                <div class="message ui-widget-content ui-corner-all"  id="msg5" style="display:none">
+                <div class="message ui-widget-content ui-corner-all"  id="msg4" >
+                  <div class="testl">Ya that was so much fun</div>
+                  <div class="arrow1l"></div><div class="arrow2l"></div>
+                </div>
+                <div class="message ui-widget-content ui-corner-all"  id="msg5" >
                   <div class="test">How about this track though</div>
                   <div class="arrow1"></div><div class="arrow2"></div>
                 </div>
-                <div class="message ui-widget-content ui-corner-all"  id="msg6" style="display:none; float:left; background:transparent; ">
-                  <div class="test" style="background:transparent;color:#006CD1;border:1px solid #006DC1 ">Nice. I've heard a couple of his tracks though</div>
+                <div class="message ui-widget-content ui-corner-all"  id="msg6" >
+
+                  <div class="testl" >Nice. I've heard a couple of his tracks though</div>
+                  <div class="arrow1l"></div><div class="arrow2l"></div>
+                </div>
+                <div class="message ui-widget-content ui-corner-all"  id="msg7">
+
+                  <div class="test">He's is playing at Warfield in a weeks right?</div>
                   <div class="arrow1"></div><div class="arrow2"></div>
                 </div>
-                <div class="message ui-widget-content ui-corner-all"  id="msg7" style="display:none">
-                  <div class="test">He's is playing at Warfield in a weeks right?</div><div class="arrow1"></div>
-                  <div class="arrow2"></div>
+                <div class="message ui-widget-content ui-corner-all"  id="msg8">
+
+                <div class="testl" >Wanna go check it out</div>
+                <div class="arrow1l"></div><div class="arrow2l"></div>
                 </div>
-                <div class="message ui-widget-content ui-corner-all"  id="msg8" style="display:none; float:left; background:transparent; ">
-                  <div class="test" style="background:transparent;color:#006CD1;border:1px solid #006DC1 ">Wanna go check it out</div>
-                  <div class="arrow1"></div><div class="arrow2"></div>
-                </div>
-                <div class="message ui-widget-content ui-corner-all"  id="msg9" style="display:none">
+                <div class="message ui-widget-content ui-corner-all"  id="msg9" >
                   <div class="test">Let's do it</div>
                   <div class="arrow1"></div><div class="arrow2"></div>
                 </div>
