--- a/index.html
+++ b/index.html
@@ -21,41 +21,22 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
-    <script src="//code.jquery.com/jquery-1.10.2.js"></script>
-    <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
-    <script>
-    $(function() {
-      var a=1;
-      // run the currently selected effect
-      function runEffect() {
-        // run the effect
-        $( "#msg"+ a ).toggle( "drop",{direction:"up"},500);
-      setTimeout( function(){  $( "#msg"+(a+2) ).toggle( "drop",{direction:"down"},500);},500);
-      };
+    <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
 
-      // set effect from select menu value
-      if (a<=9) {
-      setInterval(function() { runEffect();  a+=1;  return false;  },3000);
-    }
-    else { a=1;
-      clearInterval();
-    }; }          );
+    <script>
+
+      $( function(){ var a=1;
+        while (a<9) {
+        setTimeout ( $( ".message" ).animate({ "top": "-=48px" },"slow"  ),1000);
+      setTimeout (function(){$( ".pic" ).animate({ "left": "-=300px" },"slow");},1000);
+          a=a+1;
+        };
+        $( ".message" ).animate({ "top": "+=462px" },"slow" );
+      }
+    );
     </script>
-    <style>
-    .carousel-inner{
-      width:300px;
-      margin-left:0px;
-      height:300px;
-      overflow:hidden
-    }
-    .carousel-inner > .item > img,
-    .carousel-inner > .item > a > img {
-        position:abolsute;
-        top:50px;
-        width:273px;
-        margin-top:70px;
-        margin-left:60px;
+
+
 
 
     }
@@ -95,40 +76,36 @@
               <img src="images/christian@2x1.png"  class="img-responsive" width="273px">
             </div>
           </div>
-          <div class="col-lg-4 col-xs-8">
+          <div class="col-lg-4 col-xs-8" >
 
               <div class="bg">
                 <img src="images/iphone@2x1.png" class="img-responsive" width="360px" style="padding:0px 42px 0px 42px">
               </div>
-              <div id="myCarousel" class="carousel slide" data-ride="carousel">
 
+      <div class="carouse">
+          <div class="carouse-inner">
+                  <div class="pic" style="margin-left:0px; width:245px;" class="img-responsive">
+                    <img src="http://i685.photobucket.com/albums/vv219/Metaltim/Feb%202011/image004-1.jpg" >
+                 </div>
 
-                <!-- Wrapper for slides -->
-                <div class="carousel-inner" role="listbox" style="overflow:hidden">
-
-                  <div class="item active">
-                    <img src="http://i685.photobucket.com/albums/vv219/Metaltim/Feb%202011/image004-1.jpg" class="img-responsive"alt="Chania" width="251px" height="251px">
-
+                  <div class="pic" style="margin-left:0px; width:245px;">
+                    <img src="https://upload.wikimedia.org/wikipedia/en/8/82/Soad_aerials_single.jpg" class="img-responsive">
                   </div>
 
-                  <div class="item">
-                    <img src="https://upload.wikimedia.org/wikipedia/en/8/82/Soad_aerials_single.jpg" class="img-responsive"alt="Chania" width="251px" height="251px">
+                  <div class="pic" style="margin-left:0px;width:245px;">
+                    <img src="http://cdn.thedailybeast.com/content/dailybeast/galleries/2014/06/28/best-selling-album-covers-reimagined-bob-dylan-kanye-west-and-more/jcr:content/gallery/1bc34799-fd5e-4194-a409-5b95382b04bb/image.img.410.273.jpg/46797402.cached.jpg" clas="img-responsive">
                   </div>
 
-                  <div class="item">
-                    <img src="http://cdn.thedailybeast.com/content/dailybeast/galleries/2014/06/28/best-selling-album-covers-reimagined-bob-dylan-kanye-west-and-more/jcr:content/gallery/1bc34799-fd5e-4194-a409-5b95382b04bb/image.img.410.273.jpg/46797402.cached.jpg" class="img-responsive"alt="Flower" width="251px" height="251px">
+                  <div class="pic" style="margin-left:0px; width:245px;">
+                    <img src="http://static.wixstatic.com/media/5211d8_d0bae92862a14355b176b489109346af.jpg_srz_273_273_85_22_0.50_1.20_0.00_jpg_srz"class="img-responsive" >
                   </div>
+             </div>
 
-                  <div class="item">
-                    <img src="http://static.wixstatic.com/media/5211d8_d0bae92862a14355b176b489109346af.jpg_srz_273_273_85_22_0.50_1.20_0.00_jpg_srz" class="img-responsive"alt="Flower" width="251px" height="251px">
-                  </div>
-
-                </div>
+      </div>
 
 
-              </div>
 
-              <div style="width:247px;margin-left:60px; height:188px;">
+              <div style="width:247px;margin-left:60px; height:188px; overflow:hidden">
 
                 <div class="message ui-widget-content ui-corner-all"  id="msg1">
                   <div class="test">This one is super old though</div>
@@ -176,8 +153,8 @@
               </div>
           </div>
           <div class="col-lg-4 col-xs-2">
-                  <div style="margin-top:132px; margin-left:-82px;z-index:1000;overflow:hidden">
-                    <img src="images/christian@2xy.png"  class="img-responsive" width="273px" z-index="1000">
+                  <div style="margin-top:132px; margin-left:-82px;overflow:hidden">
+                    <img src="images/christian@2xy.png"  class="img-responsive" width="273px" >
                   </div>
         </div>
 
