--- a/jq.html
+++ b/jq.html
@@ -13,27 +13,31 @@
   </style>
   <script>
   $(function() {
-    var a=1;
 
-    // run the currently selected effect
-    function runEffect() {
-      // run the effect
-      $( "#msg"+ a ).toggle( "drop",{direction:"up"},500);
-    setTimeout( function(){  $( "#msg"+(a+2) ).toggle( "drop",{direction:"down"},500);},500)
-    };
-
+    $( ".block:first" ).animate({
+      top: 100
+    }, {
+      duration: 1000,
+      step: function( now, fx ){
+        $( ".msg:gt(0)" ).css( "left", now );
+      }
+    });
+  }
     // set effect from select menu value
     if (a<=6) {
     setInterval(function() { runEffect();  a=a+1;  return false;  },3000);
   }
   else {
     clearInterval();
-  }; }          );
+  }; 
+};          );
   </script>
 </head>
 <body>
 
-  <div style="width:347px;margin-left:60px;height:188px;background:red;">
+  <div style="width:347px;margin-left:60px;height:347px;">
+  </div>
+    <div style="width:347px;margin-left:60px;height:188px;">
 
     <div class="message ui-widget-content ui-corner-all"  id="msg1">
       <div class="test">This one is super old though</div>
