--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
       $( function(){ var a=1;t=1000;
         while (a<6) {
-        setTimeout ( $( ".message" ).animate({ "top": "-=48px" },"slow"  ),1000);
+        setTimeout ( function(){$( ".message" ).animate({ "top": "-=48px" },"slow"  );},1000);
       setTimeout (function(){$( ".pic" ).animate({ "left": "-=300px" },"slow");},t);
           a=a+1;
           t=t+1;
