--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </style>
   </head>
   <body style="background:#6967CE">
-      <div class="container">
+      <div class="container-fluid">
 
         <div class="row">
           <div class="col-lg-4 col-xs-2" style="color:white; overflow:hidden; font-family:'Source Sans Pro', sans-serif;">
@@ -84,6 +84,7 @@
               </div>
 
       <div class="carouse">
+        <div style="position:absolute; width:243px; text-align:center; top:280px; margin:0 auto; font-family:'solomon_normalregular'; font-weight:800; font-size:24px;color:white;z-index:1000000;">Abyss<br style="line height:slight;"><span style="font-weight:normal; margin:0 auto;padding:0 auto;font-size:12px;">Koan Soun</div>
           <div class="carouse-inner">
                   <div class="pic" style="margin-left:0px;" class="img-responsive">
                     <img src="http://i685.photobucket.com/albums/vv219/Metaltim/Feb%202011/image004-1.jpg" >
