--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </style>
   </head>
   <body style="background:#6967CE">
-      <div class="container-fluid">
+      <div class="container">
 
         <div class="row">
           <div class="col-lg-4 col-xs-2" style="color:white; overflow:hidden; font-family:'Source Sans Pro', sans-serif;">
