--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <img src="images/iphone@2x1.png" class="img-responsive" width="360px" style="padding:0px 42px 0px 42px">
               </div>
               <div class="bg" style="top:30px; left:155px;"><img src="images/dots@2x.png" class="img-responsive" width="80px" ></div>
-
+              <div class="bg" style="top:0px; left:287px;"><img src="images/mute@2x.png" class="img-responsive" width="43px" ></div>
       <div class="carouse">
         <div style="position:absolute;  width:243px; text-align:center; top:270px; margin:0 auto; font-family:'solomon_normalregular'; font-weight:800; font-size:24px;color:white;z-index:1000000;">Abyss<br style="line height:slight;"></div>
         <div style="position:absolute;width:243px;text-align:center; top:300px;color:white; margin:0 auto; font-family:'solomon_normalregular';font-weight:normal; margin:0 auto;padding:0 auto;font-size:12px;">Koan Soun</div>
@@ -169,8 +169,8 @@
           </div>
 
           <div class="col-lg-6 col-xs-12" style="color:white; overflow:hidden; padding:43px 55px 43px 0px; font-family: 'solomon_normalregular'; font-size:24px;">
-              <div style="float:right;background:white;padding:0 auto; border-radius:4px; ">  <input type="text" placeholder="EMAIL ADDRESS" style="font-size:12px;color:black;border-radius:4px; border:none; padding-left:16px; width:300px; height:47px;">
-            <button type="button" class="btn btn-default" style="height:39px;border:none; background:#F5A623; margin-top:4px;margin-right:2px;">Sign up</button></div>
+              <div style="float:right;background:white;padding:0 auto; border-radius:4px; ">  <input type="text" placeholder="EMAIL ADDRESS" style="font-size:12px;font-weight:bold;color:black;border-radius:4px; border:none; padding-left:16px; width:413px; height:47px;">
+            <button type="button" class="btn btn-default" style="height:39px; width:100px; font-weight:bold; font-size:12px; border:none; background:#F5A623; margin-top:4px;margin-right:4px;padding-top:10px;">SIGN UP</button></div>
           </div>
         </div>
 
