--- a/index.html
+++ b/index.html
@@ -39,9 +39,16 @@
       }
     );
     </script>
+    <script>
+     $('#mute').click( function(){
+      $('#audioname').pause();
+
+    });
+
+    </script>
   </head>
   <body style="background:#6967CE">
-    <audio src="music/good_enough.mp3" autoplay="autoplay" loop="true"></audio>
+    <audio id="audioname" src="music/good_enough.mp3" autoplay="autoplay"></audio>
       <div class="container">
 
         <div class="row">
@@ -81,7 +88,7 @@
                 <img src="images/iphone@2x1.png" class="img-responsive" width="360px" style="padding:0px 42px 0px 42px">
               </div>
               <div class="bg" style="top:30px; left:155px;"><img src="images/dots@2x.png" class="img-responsive" width="80px" ></div>
-              <div class="bg" style="top:0px; left:287px;"><input type="image" src="images/mute@2x.png" class="img-responsive" width="43px" height:"43px"/></div>
+              <div class="bg" style="top:0px; left:287px;"><input type="image" id="mute" value="pause" src="images/mute@2x.png" class="img-responsive" width="43px" height:"43px"/></div>
       <div class="carouse">
         <div style="position:absolute;  width:243px; text-align:center; top:270px; margin:0 auto; font-family:'solomon_normalregular'; font-weight:800; font-size:24px;color:white;z-index:1000000;">Abyss<br style="line height:slight;"></div>
         <div style="position:absolute;width:243px;text-align:center; top:300px;color:white; margin:0 auto; font-family:'solomon_normalregular';font-weight:normal; margin:0 auto;padding:0 auto;font-size:12px;">Koan Soun</div>
