--- a/index.html
+++ b/index.html
@@ -47,45 +47,36 @@
 
     </script>
   </head>
-  <body style="background:#6967CE">
+  <body id="lisn">
     <audio id="audioname" src="music/good_enough.mp3" autoplay="autoplay"></audio>
       <div class="container">
 
         <div class="row">
-          <div class="col-lg-4 col-xs-2" style="color:white; overflow:hidden; font-family:'Source Sans Pro', sans-serif;">
-          </div>
-          <div class="col-lg-4 col-xs-8" style="color:white; overflow:hidden; font-family:'Source Sans Pro', sans-serif;">
+          <div class="col-lg-12 col-xs-12" style="color:white; overflow:hidden; font-family:'Source Sans Pro', sans-serif;">
               <center>    <img src="images/lisn.png" class="img-responsive" width="413px" style="margin-top:40px"  > </center>
           </div>
-          <div class="col-lg-4 col-xs-2" style="color:white; overflow:hidden; font-family:'Source Sans Pro', sans-serif;">
+        </div>
+
+        <div class="row">
+          <div class="col-lg-12 col-xs-12">
+              <center> <img src="images/app_store@2x.png" class="img-responsive" width="158px" style="margin:21px 0px 40px 0px"></center>
           </div>
         </div>
 
         <div class="row">
-          <div class="col-lg-4 col-xs-2">
+          <div class="col-lg-4 col-sm-3 col-md-2 col-xs-0">
           </div>
-          <div class="col-lg-1 col-xs-1">
-          </div>
-          <div class="col-lg-2 col-xs-6">
+          <div class="col-lg-4 col-sm-6 col-md-8 col-xs-12">
 
-              <center> <img src="images/app_store@2x.png" class="img-responsive" width="158px" style="margin:21px 0px 40px 0px"> </center>
-          </div>
-          <div class="col-lg-1 col-xs-1">
-          </div>
-          <div class="col-lg-4 col-xs-2">
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-lg-4 col-xs-2">
-            <div style="margin-top:132px; margin-left:170px;z-index:1000; width:500px;">
+            <div style="margin-top:132px; margin-left:-225px; position:absolute;z-index:1000; width:300px;overflow:hidden">
               <img src="images/christian@2x1.png"  class="img-responsive" width="273px">
             </div>
-          </div>
-          <div class="col-lg-4 col-xs-8" >
 
+              <div style="margin-top:132px; margin-left:314px; position:absolute;z-index:1000; max-width:225px;overflow:hidden">
+              <img src="images/christian@2xy.png"  width="273px" >
+            </div>
               <div class="bg">
-                <img src="images/iphone@2x1.png" class="img-responsive" width="360px" style="padding:0px 42px 0px 42px">
+                <center><img src="images/iphone@2x1.png" class="img-responsive" width="360px" style="padding:0px 37px 0px 37px;"></center>
               </div>
               <div class="bg" style="top:30px; left:155px;"><img src="images/dots@2x.png" class="img-responsive" width="80px" ></div>
               <div class="bg" style="top:0px; left:287px;"><input type="image" id="mute" value="pause" src="images/mute@2x.png" class="img-responsive" width="43px" height:"43px"/></div>
@@ -114,7 +105,7 @@
 
 
 
-              <div style="width:247px;margin-left:60px; height:180px; overflow:hidden; boder-top:solid 2px #6967CE">
+              <div style="width:247px; margin-left:60px; height:180px; overflow:hidden; border-top:solid 2px #6967CE ;padding:0px 10px 0px 10px;">
 
                 <div class="message ui-widget-content ui-corner-all"  id="msg1">
                   <div class="test">This one is super old though</div>
@@ -157,16 +148,11 @@
                 </div>
                 <div class="message ui-widget-content ui-corner-all"  id="msg9" >
                   <div class="test">Let's do it</div>
-
                 </div>
               </div>
+</div>
+    <div class="col-lg-4 col-sm-3 col-md-2 col-xs-0">
           </div>
-          <div class="col-lg-4 col-xs-2">
-                  <div style="margin-top:132px; margin-left:-82px;overflow:hidden">
-                    <img src="images/christian@2xy.png"  class="img-responsive" width="273px" >
-                  </div>
-        </div>
-
       </div>
     </div>
       <div class="container-fluid">
@@ -178,7 +164,7 @@
           </div>
 
           <div class="col-lg-6 col-xs-12" style="color:white; overflow:hidden; padding:43px 55px 43px 0px; font-family: 'solomon_normalregular'; font-size:24px;">
-              <div style="float:right;background:white;padding:0 auto; border-radius:4px; ">  <input type="text" placeholder="EMAIL ADDRESS" style="font-size:12px;font-weight:bold;color:black;border-radius:4px; border:none; padding-left:16px; width:413px; height:47px;">
+              <div style="float:right;background:white;padding:0 auto; border-radius:4px; ">  <input type="text" placeholder="EMAIL ADDRESS" style="font-size:12px;margin-top:0px;font-weight:bold;color:black;border-radius:4px; border:none; padding-left:16px; width:413px; height:47px;">
             <button type="button" class="btn btn-default" style="height:39px; width:100px; font-weight:bold; font-size:12px; border:none; background:#F5A623; margin-top:4px;margin-right:4px;padding-top:10px;">SIGN UP</button></div>
           </div>
         </div>
